Details
-
Bug
-
Status: Closed
-
P3: Somewhat important
-
Resolution: Done
-
4.8.0
-
None
-
Windows 7, Linux (RedHat enterprise 6.2 & Ubuntu 10.04)
Description
It is not possible to use Qt::CustomDashLine style with QPen because of drawing issues (see attached screenshot). The issue is easy to reproduce with the attached application.
The issue cannot be reproduced with Qt 4.7.4 (or Qt 4.5.3) and this can be reproduced with Qt 4.8.0. Also, this can be reproduced with the technical preview version of Qt 4.8.0.